Bug 655549 and bug 645768.  Rejigger the quirk table color rule to work more reliably.  r=dbaron